# Toward_a_Futuristic_Emerald_Isle

./: .gitignore  CMakeLists.txt
src/: Application.h  lab4_character.cpp  lab4_skeleton.cpp  loader.cpp  loader.h  main.cpp  old_loader.cpp  old_main.txt  plane.cpp  plane.h  skybox.cpp  skybox.h
src/model/building___square___steeple_top/: license.txt  scene.gltf
src/model/furry_2b_nier_automata_free/: license.txt  scene.gltf
src/model/rubber_duck_toy_1k/: rubber_duck_toy_1k.gltf
src/model/skyscrapper/: license.txt  scene.gltf
src/render/: shader.h
src/shader/: bot.frag  bot.vert  depth_visualize.frag  depth_visualize.vert  plane.frag  plane.vert  point_shadow_instanced.vert  point_shadows.frag  point_shadows.vert  point_shadows_depth.vert  scene.frag  scene.vert  shadow.frag  shadow.vert  skybox.vert
